src-tauri/check_output_2.txt
    Checking ciel v0.1.0 (D:\projects\ciel\src-tauri)
error[E0425]: cannot find value `db_state` in this scope
   --> src\commands.rs:725:53
    |
725 |              let configured_path = db::get_setting(&db_state.path, "download_path")
    |                                                     ^^^^^^^^ not found in this scope

error[E0277]: the trait bound `(..., ..., ..., ..., i64, i64, ..., ..., i64, i32, ..., ..., ..., ..., ..., ..., ...): Params` is not satisfied
   --> src\db.rs:290:9
    |
287 |       conn.execute(
    |            ------- required by a bound introduced by this call
...
290 | /         (
291 | |             &download.id,
292 | |             &download.url,
293 | |             &download.filename,
...   |
307 | |             &download.cookies,
308 | |         ),
    | |_________^ the trait `Params` is not implemented for `(..., ..., ..., ..., i64, i64, ..., ..., i64, i32, ..., ..., ..., ..., ..., ..., ...)`
    |
    = help: the following other types implement trait `Params`:
              ()
              (A, B)
              (A, B, C)
              (A, B, C, D)
              (A, B, C, D, E)
              (A, B, C, D, E, F)
              (A, B, C, D, E, F, G)
              (A, B, C, D, E, F, G, H)
            and 9 others
note: required by a bound in `Connection::execute`
   --> C:\Users\shubh\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\rusqlite-0.32.1\src\lib.rs:623:23
    |
623 |     pub fn execute<P: Params>(&self, sql: &str, params: P) -> Result<usize> {
    |                       ^^^^^^ required by this bound in `Connection::execute`
    = note: the full name for the type has been written to 'D:/ciel_target\debug\deps\ciel_lib-aa485199fd85397a.long-type-2545203948274645969.txt'
    = note: consider using `--verbose` to print the full type name to the console

Some errors have detailed explanations: E0277, E0425.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `ciel` (lib) due to 2 previous errors
